--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,41 +8,42 @@
 </head>
 
 <body>
-<main>
-    <header>
-        <a href="">Web Studio</a>
-        <ul>
-            <li> <a href="Studio">Studio</a></li>
-            <li> <a href="Portfolio">Portfolio</a></li>
-            <li> <a href="Contacts">Contacts</a></li>
-        </ul>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-    </header>
+    <main>
+        <header>
+            <a href="">Web Studio</a>
+            <ul>
+                <li> <a href="Studio">Studio</a></li>
+                <li> <a href="Portfolio">Portfolio</a></li>
+                <li> <a href="Contacts">Contacts</a></li>
+            </ul>
+            <ul>
+                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </header>
 
 
-    <h1>Effective Solutionsfor Your Business</h1>
-    <button type="button">Order Service</button>
+        <h1>Effective Solutionsfor Your Business</h1>
+        <button type="button">Order Service</button>
         <ul>
             <li>
                 <h2>Strategy</h2>
-                    <p>
-                        Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. 
-                    </p>
+                <p>
+                    Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.
+                </p>
             </li>
             <li>
                 <h2>Punctuality</h2>
-                    <p>
-                        Bring the key message to the brand's audience for the best price within the shortest possible time.
-                    </p>
+                <p>
+                    Bring the key message to the brand's audience for the best price within the shortest possible time.
+                </p>
             </li>
             <li>
                 <h2>Diligence</h2>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                    </p>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    risk.
+                </p>
             </li>
             <li>
                 <h2>Technologies</h2>
@@ -58,13 +60,14 @@
             <li> <img src="./img/Team-Card3.jpg" alt="Camila Garcia Marketing"></li>
             <li> <img src="./img/Team-Card4.jpg" alt="Daniel Wilson UI Designer"></li>
         </ul>
-</main>
+    </main>
 
-<footer>
-<a href="">"Web Studio"</a>
-<p>
-    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-</p>
-</footer>
+    <footer>
+        <a href="">"Web Studio"</a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
+
 </html>
