--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <main>
         <header>
+            <nav>
             <a href="">Web Studio</a>
             <ul>
                 <li> <a href="Studio">Studio</a></li>
                 <li> <a href="Portfolio">Portfolio</a></li>
                 <li> <a href="Contacts">Contacts</a></li>
             </ul>
+            </nav>
             <ul>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -25,6 +27,7 @@
 
         <h1>Effective Solutionsfor Your Business</h1>
         <button type="button">Order Service</button>
+        <section>
         <ul>
             <li>
                 <h2>Strategy</h2>
@@ -52,14 +55,29 @@
                 </p>
             </li>
         </ul>
+        </section>
 
+        <section>
         <h2>Our Team</h2>
         <ul>
-            <li> <img src="./img/Team-Card1.jpg" alt="Mark Guerrero Product Designer"></li>
-            <li> <img src="./img/Team-Card2.jpg" alt="Tom Ford Frontend Developer"></li>
-            <li> <img src="./img/Team-Card3.jpg" alt="Camila Garcia Marketing"></li>
-            <li> <img src="./img/Team-Card4.jpg" alt="Daniel Wilson UI Designer"></li>
+            <li>
+                 <img src="./img/Team-Card1.jpg" alt="Mark Guerrero Product Designer"
+            width="264">
+            </li>
+            <li> 
+                <img src="./img/Team-Card2.jpg" alt="Tom Ford Frontend Developer"
+            width="264">
+            </li>
+            <li> 
+                <img src="./img/Team-Card3.jpg" alt="Camila Garcia Marketing"
+            width="264">
+            </li>
+            <li> 
+                <img src="./img/Team-Card4.jpg" alt="Daniel Wilson UI Designer"
+            width="264">
+        </li>
         </ul>
+    </section>
     </main>
 
     <footer>
