--- a/index.html
+++ b/index.html
@@ -61,20 +61,28 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./img/Team-Card1.jpg" alt="Mark Guerrero Product Designer"
+                 <img src="./img/img1.jpg" alt="Mark Guerrero Product Designer"
             width="264">
+            <p>Mark Guerrero</p>
+            <p>Product Designer</p>
             </li>
             <li> 
-                <img src="./img/Team-Card2.jpg" alt="Tom Ford Frontend Developer"
+                <img src="./img/img2.jpg" alt="Tom Ford Frontend Developer"
             width="264">
+            <p>Tom Ford</p>
+            <p>Frontend Developer</p>
             </li>
             <li> 
-                <img src="./img/Team-Card3.jpg" alt="Camila Garcia Marketing"
+                <img src="./img/img3.jpg" alt="Camila Garcia Marketing"
             width="264">
+            <p>Camila Garcia</p>
+            <p>Marketing</p>
             </li>
             <li> 
-                <img src="./img/Team-Card4.jpg" alt="Daniel Wilson UI Designer"
+                <img src="./img/img4.jpg" alt="Daniel Wilson UI Designer"
             width="264">
+            <p>Daniel Wilson</p>
+            <p>UI Designer</p>
         </li>
         </ul>
     </section>
