--- a/index.html
+++ b/index.html
@@ -8,48 +8,53 @@
 </head>
 
 <body>
-    <main>
         <header>
             <nav>
-            <a href="">Web Studio</a>
+            <a href="./index.html">Web Studio</a>
             <ul>
                 <li> <a href="Studio">Studio</a></li>
                 <li> <a href="Portfolio">Portfolio</a></li>
                 <li> <a href="Contacts">Contacts</a></li>
             </ul>
             </nav>
+
+            <adress>
             <ul>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-        </header>
-
-
+            </adress>
+             </header>
+<body>
+    <main>
+        <section>
         <h1>Effective Solutionsfor Your Business</h1>
         <button type="button">Order Service</button>
+</section>
+
         <section>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>
                     Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.
                 </p>
             </li>
             <li>
-                <h2>Punctuality</h2>
+                <h3>Punctuality</h3>
                 <p>
                     Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li>
-                <h2>Diligence</h2>
+                <h3>Diligence</h3>
                 <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                     risk.
                 </p>
             </li>
             <li>
-                <h2>Technologies</h2>
+                <h3>Technologies</h3>
                 <p>
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
@@ -63,33 +68,32 @@
             <li>
                  <img src="./img/img1.jpg" alt="Mark Guerrero Product Designer"
             width="264">
-            <p>Mark Guerrero</p>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             </li>
             <li> 
                 <img src="./img/img2.jpg" alt="Tom Ford Frontend Developer"
             width="264">
-            <p>Tom Ford</p>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
             </li>
             <li> 
                 <img src="./img/img3.jpg" alt="Camila Garcia Marketing"
             width="264">
-            <p>Camila Garcia</p>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
             </li>
             <li> 
                 <img src="./img/img4.jpg" alt="Daniel Wilson UI Designer"
             width="264">
-            <p>Daniel Wilson</p>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
         </ul>
     </section>
-    </main>
 
     <footer>
-        <a href="">"Web Studio"</a>
+        <a href="./index.html">Web Studio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
