--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-        <header>
+<header>
             <nav>
-            <a href="./index.html">Web Studio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li> <a href="Studio">Studio</a></li>
                 <li> <a href="Portfolio">Portfolio</a></li>
@@ -18,21 +18,21 @@
             </ul>
             </nav>
 
-            <adress>
+            <address>
             <ul>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-            </adress>
-             </header>
-<body>
-    <main>
-        <section>
-        <h1>Effective Solutionsfor Your Business</h1>
-        <button type="button">Order Service</button>
-</section>
+            </address>
+</header>
 
-        <section>
+<section>
+        
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+        </section>
+
+    <main>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -60,8 +60,8 @@
                 </p>
             </li>
         </ul>
-        </section>
-
+        </main>
+        
         <section>
         <h2>Our Team</h2>
         <ul>
@@ -93,7 +93,7 @@
     </section>
 
     <footer>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
