--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             </address>
 </header>
 
+<main>
 <section>
         
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
         </section>
 
-    <main>
+<section>
         <ul>
             <li>
                 <h3>Strategy</h3>
@@ -60,7 +61,7 @@
                 </p>
             </li>
         </ul>
-        </main>
+    </section>
         
         <section>
         <h2>Our Team</h2>
@@ -91,6 +92,7 @@
         </li>
         </ul>
     </section>
+    </main>
 
     <footer>
         <a href="./index.html">WebStudio</a>
