--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./img/img1.jpg" alt="Mark Guerrero Product Designer"
+                 <img src="./images/img1.jpg" alt="Mark Guerrero Product Designer"
             width="264">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             </li>
             <li> 
-                <img src="./img/img2.jpg" alt="Tom Ford Frontend Developer"
+                <img src="./images/img2.jpg" alt="Tom Ford Frontend Developer"
             width="264">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
             </li>
             <li> 
-                <img src="./img/img3.jpg" alt="Camila Garcia Marketing"
+                <img src="./images/img3.jpg" alt="Camila Garcia Marketing"
             width="264">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
             </li>
             <li> 
-                <img src="./img/img4.jpg" alt="Daniel Wilson UI Designer"
+                <img src="./images/img4.jpg" alt="Daniel Wilson UI Designer"
             width="264">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
