--- a/index.html
+++ b/index.html
@@ -1,107 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
+  </head>
 
-<body>
-<header>
-            <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li> <a href="Studio">Studio</a></li>
-                <li> <a href="Portfolio">Portfolio</a></li>
-                <li> <a href="Contacts">Contacts</a></li>
-            </ul>
-            </nav>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="Studio">Studio</a></li>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><a href="Contacts">Contacts</a></li>
+        </ul>
+      </nav>
+      <p>hhhhhhhhhh</p>
 
-            <address>
-            <ul>
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-            </address>
-</header>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </header>
 
-<main>
-<section>
-        
+    <main>
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-        </section>
+      </section>
 
-<section>
-    <h2>tekst</h2>
+      <section>
+        <h2>tekst</h2>
 
         <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>
-                    Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution.
-                </p>
-            </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>
-                    Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                    risk.
-                </p>
-            </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>
-                    Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </p>
-            </li>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
-    </section>
-        
-        <section>
+      </section>
+
+      <section>
         <h2>Our Team</h2>
         <ul>
-            <li>
-                 <img src="./images/img1.jpg" alt="Mark Guerrero Product Designer"
-            width="264">
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="Mark Guerrero Product Designer"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-            </li>
-            <li> 
-                <img src="./images/img2.jpg" alt="Tom Ford Frontend Developer"
-            width="264">
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="Tom Ford Frontend Developer"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-            </li>
-            <li> 
-                <img src="./images/img3.jpg" alt="Camila Garcia Marketing"
-            width="264">
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="Camila Garcia Marketing"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-            </li>
-            <li> 
-                <img src="./images/img4.jpg" alt="Daniel Wilson UI Designer"
-            width="264">
+          </li>
+          <li>
+            <img
+              src="./images/img4.jpg"
+              alt="Daniel Wilson UI Designer"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-        </li>
+          </li>
         </ul>
-    </section>
+      </section>
     </main>
 
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
